# weather-service-someip

./: CMakeLists.txt  readme
include/: codeprovider.hpp  configfile.hpp  mainclient.hpp  reportprovider.hpp
src/: codeprovider.cpp  mainclient.cpp  reportprovider.cpp
